apps/cluster-addons/oauth-proxy/service.yaml
# core/oauth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
  namespace: core
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 4180
      targetPort: http
      protocol: TCP
  externalTrafficPolicy: Local
  trafficDistribution: PreferSameNode # 1.35 feature
  selector:
    app: oauth-proxy
