apps/cluster-addons/oauth-proxy/http-route.yaml
# core/oauth-proxy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth-proxy
  namespace: core
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "oauth.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth-proxy
          port: 4180
