apps/cluster-addons/oauth-proxy/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth-proxy-to-redis
  namespace: redis
spec:
  endpointSelector:
    matchLabels:
      app: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "core"
            "k8s:app": oauth-proxy
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
